Closed
Bug 1511140
Opened 7 years ago
Closed 7 years ago
MachIPC.h: Fails with [-Werror,-Wmacro-redefined]
Categories
(Toolkit :: Crash Reporting, defect)
Toolkit
Crash Reporting
Tracking
()
RESOLVED
FIXED
mozilla65
People
(Reporter: Sylvestre, Assigned: Sylvestre)
References
Details
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
lizzard
:
approval-mozilla-esr60+
|
Details | Review |
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=214661522&repo=try&lineNumber=32352
[task 2018-11-29T19:20:14.132Z] 19:20:14 INFO - In file included from /builds/worker/workspace/build/src/toolkit/crashreporter/breakpad-client/mac/handler/exception_handler.h:48:
[task 2018-11-29T19:20:14.133Z] 19:20:14 INFO - In file included from /builds/worker/workspace/build/src/toolkit/crashreporter/breakpad-client/mac/crash_generation/crash_generation_client.h:33:
[task 2018-11-29T19:20:14.133Z] 19:20:14 ERROR - /builds/worker/workspace/build/src/toolkit/crashreporter/google-breakpad/src/common/mac/MachIPC.h:98:9: error: 'PRINT_MACH_RESULT' macro redefined [-Werror,-Wmacro-redefined]
[task 2018-11-29T19:20:14.133Z] 19:20:14 INFO - #define PRINT_MACH_RESULT(result_, message_) \
[task 2018-11-29T19:20:14.133Z] 19:20:14 INFO - ^
[task 2018-11-29T19:20:14.133Z] 19:20:14 INFO - /builds/worker/workspace/build/src/ipc/chromium/src/chrome/common/mach_ipc_mac.h:70:9: note: previous definition is here
[task 2018-11-29T19:20:14.133Z] 19:20:14 INFO - #define PRINT_MACH_RESULT(result_, message_) \
[task 2018-11-29T19:20:14.133Z] 19:20:14 INFO - ^
[task 2018-11-29T19:20:14.133Z] 19:20:14 INFO - 1 error generated.
| Assignee | ||
Comment 1•7 years ago
|
||
| Assignee | ||
Comment 2•7 years ago
|
||
Pushed by sledru@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/982d3f5bc88b
Declare PRINT_MACH_RESULT only once r=Ehsan
Comment 4•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Updated•7 years ago
|
Assignee: nobody → sledru
Comment 5•7 years ago
|
||
Comment on attachment 9028745 [details]
Bug 1511140 - Declare PRINT_MACH_RESULT only once r?ehsan
[ESR Uplift Approval Request]
If this is not a sec:{high,crit} bug, please state case for ESR consideration: This is required for easier backporting of patches after the reformatting of ESR using clang-format.
User impact if declined: Declining this will negatively impact our developers' ability to easily backport their patches to ESR in the future.
Fix Landed on Version: 65
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): This is a trivial change that doesn't impact the generated binary code we ship.
String or UUID changes made by this patch: None
Attachment #9028745 -
Flags: approval-mozilla-esr60?
Updated•7 years ago
|
status-firefox-esr60:
--- → affected
Comment 6•7 years ago
|
||
Comment on attachment 9028745 [details]
Bug 1511140 - Declare PRINT_MACH_RESULT only once r?ehsan
OK for uplift to ESR60 as part of the clang-format project.
Attachment #9028745 -
Flags: approval-mozilla-esr60? → approval-mozilla-esr60+
Comment 7•7 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•