Bug 1511140 - Declare PRINT_MACH_RESULT only once r=Ehsan

Differential Revision: https://phabricator.services.mozilla.com/D13458