toolkit/crashreporter/google-breakpad/src/common/mac/MachIPC.h
@@ -95,8 +95,10 @@
 //
 
 namespace google_breakpad {
+#ifndef PRINT_MACH_RESULT
 #define PRINT_MACH_RESULT(result_, message_) \
   printf(message_" %s (%d)\n", mach_error_string(result_), result_ );
+#endif
 
 //==============================================================================
 // A wrapper class for mach_msg_port_descriptor_t (with same memory layout)
